--- a/templates/output.html
+++ b/templates/output.html
@@ -18,7 +18,7 @@
             <div class="col-lg-12">
 
                 <body>
-                    <h1>Stock prices: weekly data till date</h1>
+                    <h1>Stock prices: performance in the last 30 days</h1>
             </div>
         </div>
     </div>
